fix align

--- a/css/signin.css
+++ b/css/signin.css
@@ -42,3 +42,7 @@ body {
 #logbuttons{
   margin-left: 45px;
 }
+
+#forget{
+    text-align: center;
+}
